# jit-runner-manager

./: .env.example  .gitignore  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  pytest.ini  requirements-integration.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml  integration-test.yml  release.yml  test.yml
app/: __init__.py  admin_router.py  celery_app.py  config.py  github_client.py  k8s_client.py  main.py  org_limits.py  redis_client.py  tasks.py  webhook_handler.py
config/: org-limits.yaml
docker/: Dockerfile  docker-compose.yaml
docs/: enterprise-webhook-setup.md  integration-testing.md  runner-creation-logic.md
helm/jit-runner-manager/: Chart.yaml  values.yaml
helm/jit-runner-manager/templates/: _helpers.tpl  configmap.yaml  deployment-worker.yaml  deployment.yaml  ingress.yaml  namespace-runner.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
k8s/: namespace.yaml  rbac.yaml  runner-pod-template.yaml
local-infra/: README.md  docker-compose.yaml
local-infra/github-mock/: Dockerfile  app.py  requirements.txt
local-infra/kind/: cluster-config.yaml  setup-cluster.sh  teardown-cluster.sh
local-infra/redis/: redis.conf
local-infra/scripts/: run-integration-tests.ps1  run-integration-tests.sh
tests/: __init__.py  conftest.py  test_admin_router.py  test_config.py  test_github_client.py  test_k8s_client.py  test_main.py  test_org_limits.py  test_redis_client.py  test_tasks.py  test_webhook_handler.py
tests_integration/: __init__.py  conftest.py  test_end_to_end.py  test_github_mock_integration.py  test_kubernetes_integration.py  test_redis_integration.py
