[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jit-runner-manager"
version = "1.0.0"
description = "GitHub Enterprise Server용 Just-In-Time Self-Hosted Runner 관리 시스템"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JIT Runner Manager Team"}
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
# Integration 테스트는 기본 실행에서 제외
# 실행하려면: pytest tests_integration/ --integration
markers = [
    "integration: mark test as integration test (requires external services)",
    "redis: mark test as requiring Redis",
    "kubernetes: mark test as requiring Kubernetes cluster",
    "github_mock: mark test as requiring GitHub Mock server"
]
# tests_integration/ 디렉토리는 기본 testpaths에서 제외됨
# 명시적으로 실행: pytest tests_integration/ -v --integration

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/__init__.py",
    "tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
